# parking_ch_rest

./: .env  .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/notes/: 20240710-streamlit-fixes-and-improvements-notes.md  20250505-swiss-parking-api-notes.md  20250507-basel-parking-data-integration-notes.md  20250507-bern-parking-data-integration-notes.md  20250507-city-coordinates-api-integration-notes.md  streamlit-frontend-implementation.md
docs/plans/: 20240710-streamlit-fixes-and-improvements.md  20250505-swiss-parking-api.md  20250507-city-coordinates-api-integration.md
src/: .env  main.py  streamlit_app.py
src/parkings_ch_api/: __init__.py
src/parkings_ch_api/api/: __init__.py  routes.py
src/parkings_ch_api/config/: settings.py
src/parkings_ch_api/core/: cache.py  data_source.py  errors.py  parsers.py
src/parkings_ch_api/data/: __init__.py  cities.json
src/parkings_ch_api/data/parkings/: basel.json  bern.json  lucerne.json  zurich.json
src/parkings_ch_api/data_sources/: __init__.py  basel.py  bern.py  lucerne.py  zurich.py
src/parkings_ch_api/models/: models.py
src/parkings_ch_api/utils/: http.py  logging.py  lucerne_api.py  selenium_utils.py
src/parkings_ch_frontend/: __init__.py  api_client.py  docker_api_client.py
src/parkings_ch_frontend/components/: __init__.py  charts.py  map.py
tests/: conftest.py  test_api.py
